// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — text large 1`] = `
<p
  className="paragraph-large"
>
  Foo
</p>
`;

exports[`snapshot — text large with custom classes 1`] = `
<p
  className="paragraph-large text-blue-500"
>
  Foo
</p>
`;

exports[`snapshot — text regular (explicit) 1`] = `
<p
  className="paragraph-regular"
>
  Foo
</p>
`;

exports[`snapshot — text regular (implicit) 1`] = `
<p
  className="paragraph-regular"
>
  Foo
</p>
`;

exports[`snapshot — text small 1`] = `
<p
  className="paragraph-small"
>
  Foo
</p>
`;
